--- a/app/iscrizioni16.html
+++ b/app/iscrizioni16.html
@@ -136,8 +136,8 @@
                                                         <th scope="row">4</th>
                                                         <td>Sg</td>
                                                         <td>Gaetano Aiello</td>
-                                                        <td>Francesco Zuccherato</td>
                                                         <td>Tommaso Strani</td>
+                                                        <td></td>
                                                     </tr>
                                                     <tr>
                                                         <th scope="row">5</th>
@@ -148,7 +148,7 @@
                                                     </tr>
                                                     <tr>
                                                         <th scope="row">6</th>
-                                                        <td></td>
+                                                        <td>A.C. Avanti Cristo</td>
                                                         <td>Samuele Candito</td>
                                                         <td>Nicola Fucksia</td>
                                                         <td>Diego Frascio</td>
@@ -162,24 +162,24 @@
                                                     </tr>
                                                     <tr>
                                                         <th scope="row">8</th>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
+                                                        <td>Coppa del Bisnonno</td>
+                                                        <td>Federico Rossi</td>
+                                                        <td>Sirio Zannoni</td>
+                                                        <td>Nicolò Zama</td>
                                                     </tr>
                                                     <tr>
                                                         <th scope="row">9</th>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
+                                                        <td>Asse Ravenna Pechino Carraie</td>
+                                                        <td>Glenn Ferrari</td>
+                                                        <td>Lorenzo Preda</td>
+                                                        <td>Simone Fornasari</td>
                                                     </tr>
                                                     <tr>
                                                         <th scope="row">10</th>
                                                         <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
+                                                        <td>Matteo Ortelli</td>
+                                                        <td>Ivan Farabegoli</td>
+                                                        <td>Lorenzo Foschini</td>
                                                     </tr>
                                                     <tr>
                                                         <th scope="row">11</th>
