--- a/app/iscrizioni16.html
+++ b/app/iscrizioni16.html
@@ -97,7 +97,7 @@
                                     </h2>
                                 </div>
 
-                                <div id="collapse2906" class="collapse show" aria-labelledby="heading2906" data-parent="#accordionExample">
+                                <div id="collapse2906" class="collapse" aria-labelledby="heading2906" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="table-responsive">
                                             <table class="table">
@@ -134,10 +134,10 @@
                                                     </tr>
                                                     <tr>
                                                         <th scope="row">4</th>
-                                                        <td>Sg</td>
-                                                        <td>Gaetano Aiello</td>
-                                                        <td>Tommaso Strani</td>
-                                                        <td></td>
+                                                        <td>Fresh</td>
+                                                        <td>Lorenzo Perrone</td>
+                                                        <td>Luca Boscherini</td>
+                                                        <td>Mattia Massaro</td>
                                                     </tr>
                                                     <tr>
                                                         <th scope="row">5</th>
@@ -211,7 +211,7 @@
                                     </h2>
                                 </div>
 
-                                <div id="collapse1307" class="collapse" aria-labelledby="heading1307" data-parent="#accordionExample">
+                                <div id="collapse1307" class="collapse show" aria-labelledby="heading1307" data-parent="#accordionExample">
                                     <div class="card-body">
                                         <div class="table-responsive">
                                             <table class="table">
@@ -225,6 +225,20 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody>
+                                                    <tr>
+                                                        <th scope="row">1</th>
+                                                        <td></td>
+                                                        <td>Lorenzo Monti</td>
+                                                        <td>Giacomo Minniti</td>
+                                                        <td>Matteo Accorsi</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">2</th>
+                                                        <td>Gardini quello falso</td>
+                                                        <td>Nicolò Baldrati</td>
+                                                        <td>Michele Gardini</td>
+                                                        <td>Alberto Visani</td>
+                                                    </tr>
 
                                                 </tbody>
                                             </table>
