--- a/app/classifica.html
+++ b/app/classifica.html
@@ -100,36 +100,58 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-
                                     <tr class="premio">
-                                        <td>25</td>
-                                        <td>Patrick Bandini</td>
-                                    </tr>
-                                    <tr class="premio">
-                                        <td>25</td>
-                                        <td>Lorenzo Grottoli</td>
-                                    </tr>
-                                    <tr class="premio">
-                                        <td>25</td>
-                                        <td>Matteo Aldini</td>
-                                    </tr>
-                                    <tr class="premio">
-                                        <td>25</td>
-                                        <td>Federico Pollino</td>
-                                    </tr>
-                                    <tr class="premio">
-                                        <td>20</td>
+                                        <td>40</td>
                                         <td>Matteo Pirazzoli</td>
                                     </tr>
                                     <tr class="premio">
-                                        <td>20</td>
+                                        <td>40</td>
+                                        <td>Filippo Sampaoli</td>
+                                    </tr>
+                                    <tr class="premio">
+                                        <td>40</td>
                                         <td>Filippo Rontini</td>
                                     </tr>
                                     <tr class="premio">
-                                        <td>20</td>
-                                        <td>Filippo Sampaoli</td>
+                                        <td>37</td>
+                                        <td>Patrick Bandini</td>
                                     </tr>
-
+                                    <tr class="premio">
+                                        <td>37</td>
+                                        <td>Lorenzo Grottoli</td>
+                                    </tr>
+                                    <tr class="premio">
+                                        <td>30</td>
+                                        <td>Patrick Martini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>25</td>
+                                        <td>Matteo Aldini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>25</td>
+                                        <td>Federico Pollino</td>
+                                    </tr>
+                                    <tr>
+                                        <td>25</td>
+                                        <td>Samuele Taglioli</td>
+                                    </tr>
+                                    <tr>
+                                        <td>25</td>
+                                        <td>Mattia Gatta</td>
+                                    </tr>
+                                    <tr>
+                                        <td>25</td>
+                                        <td>Massimo Piadelli</td>
+                                    </tr>
+                                    <tr>
+                                        <td>20</td>
+                                        <td>Federico Errani</td>
+                                    </tr>
+                                    <tr>
+                                        <td>18</td>
+                                        <td>Matteo Bologna</td>
+                                    </tr>
                                     <tr>
                                         <td>15</td>
                                         <td>Alessandro Cardia</td>
@@ -140,11 +162,11 @@
                                     </tr>
                                     <tr>
                                         <td>15</td>
-                                        <td>Patrick Martini</td>
+                                        <td>Marco Silvestroni</td>
                                     </tr>
                                     <tr>
-                                        <td>12</td>
-                                        <td>Matteo Bologna</td>
+                                        <td>15</td>
+                                        <td>Giacomo Silvagni</td>
                                     </tr>
                                     <tr>
                                         <td>12</td>
@@ -153,6 +175,10 @@
                                     <tr>
                                         <td>12</td>
                                         <td>Stefano Marchini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>12</td>
+                                        <td>Riccardo Cardia</td>
                                     </tr>
                                     <tr>
                                         <td>10</td>
@@ -164,8 +190,12 @@
                                     </tr>
                                     <tr>
                                         <td>10</td>
-                                        <td>Federico Errani</td>
-                                    </tr
+                                        <td>Marco Sabbioni</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Gianluca Garelli</td>
+                                    </tr>
                                     <tr>
                                         <td>8</td>
                                         <td>Luca Iacconi</td>
@@ -177,6 +207,18 @@
                                     <tr>
                                         <td>8</td>
                                         <td>Luca Campedelli</td>
+                                    </tr>
+                                    <tr>
+                                        <td>8</td>
+                                        <td>Alessandro Mancini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>8</td>
+                                        <td>Matteo Camerani</td>
+                                    </tr>
+                                    <tr>
+                                        <td>8</td>
+                                        <td>Federico Rambaldi</td>
                                     </tr>
                                     <tr>
                                         <td>6</td>
@@ -191,6 +233,14 @@
                                         <td>Luca Boscherini</td>
                                     </tr>
                                     <tr>
+                                        <td>6</td>
+                                        <td>Lorenzo Tommasini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>6</td>
+                                        <td>Nicola Morigi</td>
+                                    </tr>
+                                    <tr>
                                         <td>4</td>
                                         <td>Luca Poletti</td>
                                     </tr>
@@ -201,6 +251,18 @@
                                     <tr>
                                         <td>4</td>
                                         <td>Lorenzo Monti</td>
+                                    </tr>
+                                    <tr>
+                                        <td>4</td>
+                                        <td>Marco Laghi</td>
+                                    </tr>
+                                    <tr>
+                                        <td>4</td>
+                                        <td>Virginio Minguzzi</td>
+                                    </tr>
+                                    <tr>
+                                        <td>4</td>
+                                        <td>Nicola Callini</td>
                                     </tr>
                                     <tr>
                                         <td>1</td>
@@ -231,7 +293,10 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-
+                                    <tr class="premio">
+                                        <td>30</td>
+                                        <td>Greta Galeati</td>
+                                    </tr>
                                     <tr class="premio">
                                         <td>25</td>
                                         <td>Michela Alfieri</td>
@@ -245,18 +310,29 @@
                                         <td>Carlotta Bendandi</td>
                                     </tr>
                                     <tr class="premio">
-                                        <td>20</td>
-                                        <td>Greta Galeati</td>
+                                        <td>25</td>
+                                        <td>Sofia Ceroni</td>
                                     </tr>
                                     <tr class="premio">
+                                        <td>25</td>
+                                        <td>Caterina Nanni</td>
+                                    </tr>
+                                    <tr>
                                         <td>20</td>
                                         <td>Alessia Carlini</td>
                                     </tr>
-                                    <tr class="premio">
+                                    <tr>
                                         <td>20</td>
                                         <td>Federica Baldini</td>
                                     </tr>
-
+                                    <tr>
+                                        <td>20</td>
+                                        <td>Sonia Capriglia</td>
+                                    </tr>
+                                    <tr>
+                                        <td>20</td>
+                                        <td>Camilla Orlandini</td>
+                                    </tr>
                                     <tr>
                                         <td>15</td>
                                         <td>Eleonora Nespeca</td>
@@ -268,6 +344,42 @@
                                     <tr>
                                         <td>15</td>
                                         <td>Elisa Bertini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>15</td>
+                                        <td>Ilaria Giacometti</td>
+                                    </tr>
+                                    <tr>
+                                        <td>15</td>
+                                        <td>Jessica Joly</td>
+                                    </tr>
+                                    <tr>
+                                        <td>12</td>
+                                        <td>Chiara Bosi</td>
+                                    </tr>
+                                    <tr>
+                                        <td>12</td>
+                                        <td>Claudia Pasini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Consuelo Raccagni</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Sarà Circiag</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Francesca Servadei</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Beatrice Magnani</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Valentina Riparbelli</td>
                                     </tr>
                                 </tbody>
                             </table>
